# OmniKit

./: .gitignore  DESIGN.md  README.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/design/: visual-inventory.md
docs/specs/: 2026-07-21-desktop-toolbox-mvp.md  2026-07-22-desktop-runtime-reliability.md  2026-07-24-independent-ai-image-tools.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: image_jobs.rs  lib.rs  main.rs
src/assets/fonts/: LICENSE-HarmonyOS-Sans.txt
src/components/: AiImageTools.tsx  AppPanels.tsx  BrandMark.tsx  ClipboardTool.tsx  CodecTool.tsx  EducationTools.tsx  FileTools.tsx  Icon.tsx  ImageTools.test.ts  ImageTools.tsx  JsonTool.tsx  OcrTool.tsx  Sidebar.tsx  ToolHome.tsx  ToolWorkspace.tsx  Topbar.tsx
src/lib/: aiImageTools.test.ts  aiImageTools.ts  aiService.test.ts  aiService.ts  clipboardHistory.test.ts  clipboardHistory.ts  education.test.ts  education.ts  imageQueue.test.ts  imageQueue.ts  native.ts  registry.test.ts  registry.ts  textTransforms.test.ts  textTransforms.ts  updater.ts
