[package]
name = "omnikit"
version = "0.1.0"
description = "A local-first desktop toolbox"
authors = ["kanne-lu"]
edition = "2021"

[lib]
name = "omnikit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
md-5 = "0.10"
serde = { version = "1", features = ["derive"] }
sha1 = "0.10"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
